Update style.css err fixed images

--- a/style.css
+++ b/style.css
@@ -260,35 +260,35 @@ img {
 }
 
 #earth {
-  background-image: url(/images/desktop/image-deep-earth.jpg);
+  background-image: url(./images/desktop/image-deep-earth.jpg);
 }
 
 #arcade {
-  background-image: url(/images/desktop/image-night-arcade.jpg);
+  background-image: url(./images/desktop/image-night-arcade.jpg);
 }
 
 #soccer {
-  background-image: url(/images/desktop/image-soccer-team.jpg);
+  background-image: url(./images/desktop/image-soccer-team.jpg);
 }
 
 #grid {
-  background-image: url(/images/desktop/image-grid.jpg);
+  background-image: url(./images/desktop/image-grid.jpg);
 }
 
 #above {
-  background-image: url(/images/desktop/image-from-above.jpg);
+  background-image: url(./images/desktop/image-from-above.jpg);
 }
 
 #borealis {
-  background-image: url(/images/desktop/image-pocket-borealis.jpg);
+  background-image: url(./images/desktop/image-pocket-borealis.jpg);
 }
 
 #curiosity {
-  background-image: url(/images/desktop/image-curiosity.jpg);
+  background-image: url(./images/desktop/image-curiosity.jpg);
 }
 
 #fisheye {
-  background-image: url(/images/desktop/image-fisheye.jpg);
+  background-image: url(./images/desktop/image-fisheye.jpg);
 }
 
 @media (max-width: 600px) {
