--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ img {
 }
 
 .banner-box {
-  background-image: url(/images/desktop/image-hero.jpg);
+  background-image: url("./images/desktop/image-hero.jpg");
   background-repeat: no-repeat;
   background-size: 1250px;
   height: 80vh;
@@ -260,35 +260,35 @@ img {
 }
 
 #earth {
-  background-image: url(./images/desktop/image-deep-earth.jpg);
+  background-image: url("./images/desktop/image-deep-earth.jpg");
 }
 
 #arcade {
-  background-image: url(./images/desktop/image-night-arcade.jpg);
+  background-image: url("./images/desktop/image-night-arcade.jpg");
 }
 
 #soccer {
-  background-image: url(./images/desktop/image-soccer-team.jpg);
+  background-image: url("./images/desktop/image-soccer-team.jpg");
 }
 
 #grid {
-  background-image: url(./images/desktop/image-grid.jpg);
+  background-image: url("./images/desktop/image-grid.jpg");
 }
 
 #above {
-  background-image: url(./images/desktop/image-from-above.jpg);
+  background-image: url("./images/desktop/image-from-above.jpg");
 }
 
 #borealis {
-  background-image: url(./images/desktop/image-pocket-borealis.jpg);
+  background-image: url("./images/desktop/image-pocket-borealis.jpg");
 }
 
 #curiosity {
-  background-image: url(./images/desktop/image-curiosity.jpg);
+  background-image: url("./images/desktop/image-curiosity.jpg");
 }
 
 #fisheye {
-  background-image: url(./images/desktop/image-fisheye.jpg);
+  background-image: url("./images/desktop/image-fisheye.jpg");
 }
 
 @media (max-width: 600px) {
@@ -316,35 +316,35 @@ img {
     margin: 15px auto;
   }
   #earth {
-    background-image: url(/images/mobile/image-deep-earth.jpg);
+    background-image: url("./images/mobile/image-deep-earth.jpg");
   }
 
   #arcade {
-    background-image: url(/images/mobile/image-night-arcade.jpg);
+    background-image: url("./images/mobile/image-night-arcade.jpg");
   }
 
   #soccer {
-    background-image: url(/images/mobile/image-soccer-team.jpg);
+    background-image: url("./images/mobile/image-soccer-team.jpg");
   }
 
   #grid {
-    background-image: url(/images/mobile/image-grid.jpg);
+    background-image: url("./images/mobile/image-grid.jpg");
   }
 
   #above {
-    background-image: url(/images/mobile/image-from-above.jpg);
+    background-image: url("./images/mobile/image-from-above.jpg");
   }
 
   #borealis {
-    background-image: url(/images/mobile/image-pocket-borealis.jpg);
+    background-image: url("./images/mobile/image-pocket-borealis.jpg");
   }
 
   #curiosity {
-    background-image: url(/images/mobile/image-curiosity.jpg);
+    background-image: url("./images/mobile/image-curiosity.jpg");
   }
 
   #fisheye {
-    background-image: url(/images/mobile/image-fisheye.jpg);
+    background-image: url("./images/mobile/image-fisheye.jpg");
   }
 }
 
